--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
+    "react-datetime-picker": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
