--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.2.0",
     "react-speech-recognition": "^3.10.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
