Add text editor and decorate ClassPage basically

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.4.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^6.2.1",
@@ -20,16 +21,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "ckeditor4-react": "^4.1.1",
     "date-fns": "^2.29.3",
+    "draft-js": "^0.11.7",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
     "react-datetime-picker": "^4.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.2.0",
     "react-speech-recognition": "^3.10.0",
     "styled-components": "^5.3.6",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
