--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@jitsi/react-sdk": "^1.3.0",
     "@mui/base": "^5.0.0-alpha.113",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.117",
     "@mui/material": "^5.11.4",
     "@mui/styled-engine-sc": "^5.11.0",
     "@mui/system": "^5.11.4",
+    "@mui/x-data-grid": "^5.17.22",
     "@mui/x-date-pickers": "^5.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
