Cập nhật trang giới thiệu của lớp

--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "ckeditor4-react": "^4.1.1",
     "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
+    "html-react-parser": "^3.0.9",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
     "react-datetime-picker": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-photo-view": "^1.2.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
