--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^35.4.0",
+    "@cloudinary/react": "^1.11.0",
+    "@cloudinary/url-gen": "^1.9.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^6.2.1",
@@ -25,6 +27,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
     "ckeditor4-react": "^4.1.1",
+    "cloudinary-react": "^1.8.1",
     "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
     "html-react-parser": "^3.0.9",
