--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cloudinary-react": "^1.8.1",
     "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
+    "history": "^5.3.0",
     "html-react-parser": "^3.0.9",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
