--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-react-parser": "^3.0.9",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
+    "react-confirm-alert": "^3.0.6",
     "react-datetime-picker": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-photo-view": "^1.2.3",
