--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@jitsi/react-sdk": "^1.3.0",
+    "@material/drawer": "^14.0.0",
     "@mui/base": "^5.0.0-alpha.113",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.117",
