--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/system": "^5.11.4",
     "@mui/x-data-grid": "^5.17.22",
     "@mui/x-date-pickers": "^5.0.13",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -34,6 +35,7 @@
     "draft-js": "^0.11.7",
     "history": "^5.3.0",
     "html-react-parser": "^3.0.9",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
     "react-confirm-alert": "^3.0.6",
@@ -46,6 +48,8 @@
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.2.0",
     "react-speech-recognition": "^3.10.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^5.3.6",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
