--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/system": "^5.11.4",
     "@mui/x-data-grid": "^5.17.22",
     "@mui/x-date-pickers": "^5.0.13",
+    "@paypal/react-paypal-js": "^7.8.3",
     "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
