--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "axios": "^1.3.6",
     "ckeditor5-custom-build": "file:ckeditor5",
     "cloudinary-react": "^1.8.1",
     "date-fns": "^2.29.3",
