--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.3.6",
+    "chart.js": "^4.3.0",
     "ckeditor5-custom-build": "file:ckeditor5",
     "cloudinary-react": "^1.8.1",
     "date-fns": "^2.29.3",
@@ -40,6 +41,7 @@
     "net": "^1.0.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
+    "react-chartjs-2": "^5.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-countdown": "^2.3.5",
     "react-datetime-picker": "^4.2.0",
