--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   "devDependencies": {
     "babel-plugin-module-resolver": "^5.0.0",
     "customize-cra": "^1.0.0",
+    "dotenv-webpack": "^8.0.1",
     "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.2.4"
   }
